Fix #13 - remove unneeded white-space:nowrap around fields on registration template

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ table.pluginProfileBlock {
 }
 
 span.pluginProfileField {
-    white-space: nowrap;
 }
 
 fieldset.pluginProfileForm {
